@@ -1,3 +1,14 @@
+2011-01-14  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: provide script column offset to frontend.
+        https://bugs.webkit.org/show_bug.cgi?id=52377
+
+        * parser/SourceCode.h:
+        (JSC::SourceCode::SourceCode):
+        (JSC::SourceCode::firstColumn):
+
 2011-01-13  Darin Adler  <darin@apple.com>
 
         Reviewed by Geoff Garen.
